Ui changes discussed today

--- a/app/src/main/res/drawable/ic_bn_account_circle.xml
+++ b/app/src/main/res/drawable/ic_bn_account_circle.xml
@@ -1,12 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32.543dp"
-    android:height="32.543dp"
-    android:viewportWidth="32.543"
-    android:viewportHeight="32.543">
+    android:width="21.507dp"
+    android:height="23.123dp"
+    android:viewportWidth="21.507"
+    android:viewportHeight="23.123">
   <path
-      android:pathData="M0,0H32.543V32.543H0Z"
-      android:fillColor="#00000000"/>
-  <path
-      android:pathData="M16.271,2.712A13.559,13.559 0,1 0,29.831 16.271,13.564 13.564,0 0,0 16.271,2.712ZM16.271,6.78a4.068,4.068 0,1 1,-4.068 4.068A4.062,4.062 0,0 1,16.271 6.78ZM16.271,26.034a9.764,9.764 0,0 1,-8.136 -4.366c0.041,-2.7 5.424,-4.176 8.136,-4.176s8.095,1.478 8.136,4.176A9.764,9.764 0,0 1,16.271 26.034Z"
-      android:fillColor="#2d84b7"/>
+      android:pathData="M20.535,22.873a0.745,0.745 0,0 0,0.723 -0.723L21.258,19.386a2.641,2.641 0,0 0,-0.978 -2.084,33.248 33.248,0 0,0 -5.571,-3.615L14.709,10.499a2.537,2.537 0,0 0,0.808 -1.871v-4.04A4.356,4.356 0,0 0,11.178 0.25h-0.851a4.356,4.356 0,0 0,-4.338 4.338v4.04a2.537,2.537 0,0 0,0.808 1.871v3.189A33.248,33.248 0,0 0,1.228 17.303a2.641,2.641 0,0 0,-0.978 2.084L0.25,22.15a0.723,0.723 0,0 0,1.446 0L1.696,19.386a1.218,1.218 0,0 1,0.425 -0.936,28.3 28.3,0 0,1 5.613,-3.572 0.953,0.953 0,0 0,0.51 -0.808v-3.87a0.679,0.679 0,0 0,-0.34 -0.6,1.109 1.109,0 0,1 -0.468,-0.893v-4.04a2.9,2.9 0,0 1,2.892 -2.892L11.178,1.775a2.9,2.9 0,0 1,2.892 2.892v4.04a1,1 0,0 1,-0.468 0.893,0.679 0.679,0 0,0 -0.34,0.6v3.87a0.9,0.9 0,0 0,0.51 0.808A32.186,32.186 0,0 1,19.387 18.45a1.148,1.148 0,0 1,0.425 0.936L19.812,22.15A0.745,0.745 0,0 0,20.535 22.873Z"
+      android:strokeWidth="0.5"
+      android:fillColor="#2D84B7"
+      android:strokeColor="#2D84B7"/>
 </vector>
