--- a/app/src/main/res/drawable/ic_local_mall_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_local_mall_black_24dp.xml
@@ -1,9 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="33.992dp"
-    android:height="33.992dp"
-    android:viewportWidth="33.992"
-    android:viewportHeight="33.992">
+    android:width="23.282dp"
+    android:height="29.408dp"
+    android:viewportWidth="23.282"
+    android:viewportHeight="29.408">
   <path
-      android:pathData="M26.91,8.498L24.078,8.498a7.082,7.082 0,1 0,-14.163 0L7.082,8.498a2.829,2.829 0,0 0,-2.819 2.833L4.249,28.326a2.841,2.841 0,0 0,2.833 2.833L26.91,31.159a2.841,2.841 0,0 0,2.833 -2.833v-17A2.841,2.841 0,0 0,26.91 8.498ZM16.996,4.249A4.243,4.243 0,0 1,21.249 8.498L12.749,8.498A4.243,4.243 0,0 1,16.996 4.249ZM16.996,18.412a7.084,7.084 0,0 1,-7.082 -7.082L12.749,11.33a4.249,4.249 0,1 0,8.5 0h2.833A7.084,7.084 0,0 1,16.996 18.416Z"
+      android:pathData="M21.2,29.408L2.083,29.408a2.084,2.084 0,0 1,-2.065 -2.358L2.567,7.936A2.09,2.09 0,0 1,4.632 6.127L18.649,6.127a2.091,2.091 0,0 1,2.066 1.809l2.549,19.115A2.084,2.084 0,0 1,21.2 29.408ZM4.632,7.352a0.858,0.858 0,0 0,-0.849 0.744L1.234,27.211a0.858,0.858 0,0 0,0.849 0.972L21.2,28.183a0.858,0.858 0,0 0,0.849 -0.972L19.5,8.096a0.859,0.859 0,0 0,-0.849 -0.744Z"
+      android:fillColor="#2d84b7"/>
+  <path
+      android:pathData="M14.704,9.8a0.613,0.613 0,0 1,-0.613 -0.613L14.091,3.676a2.451,2.451 0,1 0,-4.9 0L9.191,9.19A0.613,0.613 0,0 1,7.965 9.19L7.965,3.676a3.676,3.676 0,0 1,7.352 0L15.317,9.19A0.613,0.613 0,0 1,14.704 9.8Z"
       android:fillColor="#2d84b7"/>
 </vector>
