--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -28,9 +28,9 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight=".9"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center_vertical"
             android:layout_margin="5dp"
-            android:src="@drawable/close" />
+            android:src="@drawable/ic_close_white" />
 
     </LinearLayout>
 
@@ -129,14 +129,14 @@
                     android:layout_height="wrap_content"
                     android:text="Holder Name"
                     android:textSize="16sp"
-                    android:fontFamily="@font/josefin_sans" />
+                    />
 
                 <EditText
                     android:id="@+id/add_money_holder_name"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:padding="@dimen/dimen_10dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:textColor="@color/textColor"
                     android:layout_marginTop="5dp"
                     android:inputType="text"/>
@@ -155,15 +155,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Card Number"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/josefin_sans" />
+                    android:textSize="16sp"/>
 
                 <EditText
                     android:id="@+id/add_money_creditCardNumber"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:padding="@dimen/dimen_10dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:inputType="number"
                     android:textColor="@color/textColor"
                     android:layout_marginTop="5dp"
@@ -190,15 +189,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Card Expiry"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/josefin_sans" />
+                        android:textSize="16sp" />
 
                     <EditText
                         android:id="@+id/add_money_card_expiry"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:padding="@dimen/dimen_10dp"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:inputType="date"
                         android:maxLength="5"
                         android:textColor="@color/textColor"
@@ -216,15 +214,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Card CVV"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/josefin_sans" />
+                        android:textSize="16sp"/>
 
                     <EditText
                         android:id="@+id/add_money_card_cvv"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:padding="10dp"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:inputType="number"
                         android:textColor="@color/textColor"
                         android:layout_marginTop="5dp"
@@ -243,7 +240,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight=".2"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Purpose"
                     android:textSize="16sp" />
                 <LinearLayout
@@ -251,7 +247,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:padding="8dp"
-                    android:background="@drawable/edittext_corner">
+                    android:background="@drawable/outline_primary">
                     <CheckBox
                         android:id="@+id/checkbox_savings"
                         android:layout_width="wrap_content"
@@ -286,7 +282,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:orientation="horizontal">
                     <TextView
 
@@ -358,10 +354,11 @@
             </FrameLayout>
             <LinearLayout
                 android:id="@+id/edit_buttons"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center_horizontal">
 
 
 
@@ -369,28 +366,29 @@
                     android:id="@+id/delete_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
-                    android:paddingEnd="10dp"
-                    android:background="@drawable/round_button_red"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:background="@drawable/rectangular_blue_solid"
                     android:text="@string/bt_delete"
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:drawableEnd="@drawable/ic_right_chevron"
                     android:visibility="gone"/>
                 <Button
                     android:id="@+id/button_add_money"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingEnd="10dp"
-                    android:background="@drawable/round_button_dark_green"
+                    android:layout_margin="10dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:background="@drawable/rectangular_blue_solid"
                     android:text="@string/deposit"
                     android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:drawableEnd="@drawable/ic_right_chevron"/>
+                    android:textSize="16sp" />
             </LinearLayout>
 
         </LinearLayout>
