--- a/app/src/main/res/drawable/ic_payments_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_payments_black_24dp.xml
@@ -1,9 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="31.212dp"
-    android:height="31.212dp"
-    android:viewportWidth="31.212"
-    android:viewportHeight="31.212">
+    android:width="29.611dp"
+    android:height="21.807dp"
+    android:viewportWidth="29.611"
+    android:viewportHeight="21.807">
   <path
-      android:pathData="M24.709,18.202L24.709,7.802a2.609,2.609 0,0 0,-2.6 -2.6L3.9,5.202A2.609,2.609 0,0 0,1.3 7.802L1.3,18.202a2.609,2.609 0,0 0,2.6 2.6L22.108,20.802A2.609,2.609 0,0 0,24.709 18.202ZM13,16.902a3.9,3.9 0,1 1,3.9 -3.9A3.9,3.9 0,0 1,13 16.902ZM29.911,9.102L29.911,23.409a2.609,2.609 0,0 1,-2.6 2.6L5.2,26.009v-2.6L27.31,23.409L27.31,9.102Z"
-      android:fillColor="#2d84b7"/>
+      android:pathData="M23.909,13.5L23.909,3.1a2.609,2.609 0,0 0,-2.6 -2.6L3.1,0.5A2.609,2.609 0,0 0,0.5 3.1L0.5,13.5a2.609,2.609 0,0 0,2.6 2.6L21.308,16.1a2.609,2.609 0,0 0,2.6 -2.6ZM12.2,12.2a3.9,3.9 0,1 1,3.9 -3.9,3.9 3.9,0 0,1 -3.9,3.9ZM29.111,4.4L29.111,18.707a2.609,2.609 0,0 1,-2.6 2.6L4.4,21.307v-2.6L26.51,18.707L26.51,4.4Z"
+      android:strokeWidth="1"
+      android:fillColor="#00000000"
+      android:strokeColor="#2d84b7"/>
 </vector>
