--- a/app/src/main/res/layout/fragment_beneficiaries_list.xml
+++ b/app/src/main/res/layout/fragment_beneficiaries_list.xml
@@ -18,7 +18,8 @@
             android:id="@+id/toolbar_beneficiaries_list"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:navigationIcon="@drawable/ic_chevron_left_white"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -116,7 +117,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp"
+        android:padding="15dp"
         android:layout_marginTop="?actionBarSize"
         android:visibility="visible">
 
