--- a/app/src/main/res/layout/fragment_id_information.xml
+++ b/app/src/main/res/layout/fragment_id_information.xml
@@ -6,35 +6,35 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".fragments.wallet_fragments.IdInformationFragment">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <com.google.android.material.appbar.MaterialToolbar
+          <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+              android:background="@color/white"
+              app:titleTextColor="@color/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:navigationIcon="@drawable/ic_chevron_left_blue"/>
 
-        </com.google.android.material.appbar.AppBarLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@color/windowBackground"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:background="@color/white"
+            android:layout_marginTop="?actionBarSize">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="Enter ID Information and Earn 10 Credit Score Points"
-                android:textColor="@android:color/black"
+                android:textColor="@color/textColor"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -49,7 +49,9 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="?actionBarSize"
                     android:orientation="vertical"
-                    android:padding="@dimen/margin_15">
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="10dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -57,7 +59,8 @@
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="start"
                         android:text="ID Type"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -67,20 +70,28 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/rectangular_blue_solid">
 
                         <Spinner
                             android:id="@+id/id_type"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:layout_margin="6dp"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:gravity="center"
+                            android:spinnerMode="dropdown"
+                            android:padding="5dp"
                             android:entries="@array/spinner_id_type"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                             />
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginBottom="10dp"
+                            android:src="@drawable/ic_right_chevron_arrow_white"
+                            android:rotation="90"/>
 
                     </RelativeLayout>
 
@@ -90,7 +101,8 @@
                         android:layout_marginTop="10dp"
                         android:gravity="start"
                         android:text="ID Number"
-                        android:textColor="@android:color/black"
+                        android:textSize="16sp"
+                        android:textColor="@color/textColor"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -99,7 +111,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/outline_primary">
 
                         <EditText
                             android:id="@+id/id_number"
@@ -108,8 +121,8 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
+                            android:textSize="14sp"
                             android:textColor="@android:color/black"
-                            android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -122,14 +135,16 @@
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="center_vertical"
                         android:text="Expiry Date"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
 
                     <RelativeLayout
                         android:id="@+id/expiry_date_layout"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/outline_primary">
 
                         <TextView
                             android:id="@+id/expiry_date"
@@ -138,7 +153,6 @@
                             android:layout_centerInParent="true"
                             android:padding="12dp"
                             android:textColor="@android:color/black"
-                            android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -150,7 +164,8 @@
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="15dp"
-                            android:src="@drawable/ic_calendar" />
+                            android:src="@drawable/ic_calendar"
+                            app:tint="@color/textColor" />
 
                     </RelativeLayout>
 
@@ -160,7 +175,8 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
                         android:text="Upload ID"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -172,6 +188,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Front"
+                            android:textColor="@color/textColor"
                             app:layout_constraintBottom_toTopOf="@id/id_front"
                             app:layout_constraintEnd_toEndOf="@id/id_front"
                             app:layout_constraintStart_toStartOf="parent"
@@ -196,6 +213,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Back"
+                            android:textColor="@color/textColor"
                             app:layout_constraintBottom_toTopOf="@id/id_back"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@id/id_back"
@@ -221,30 +239,32 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/submit_button"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginEnd="5dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/rectangular_blue_solid"
-                            android:text="@string/submit"
-                            android:textColor="@color/white"
-                            android:textStyle="bold" />
-
                         <Button
                             android:id="@+id/cancel_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="10dp"
+                            android:layout_marginEnd="15dp"
                             android:layout_weight="1"
-                            android:background="@drawable/rectangular_red_solid"
+                            android:background="@drawable/rectangular_blue_solid"
                             android:text="@string/cancel"
                             android:textColor="@color/white"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:textSize="18sp"/>
+
+                        <Button
+                            android:id="@+id/submit_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rectangular_blue_solid"
+                            android:text="@string/submit"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:textSize="18sp"/>
+
 
                     </LinearLayout>
 
