--- a/app/src/main/res/layout/new_fragment_wallet_account.xml
+++ b/app/src/main/res/layout/new_fragment_wallet_account.xml
@@ -31,7 +31,8 @@
                 android:text="Account Type : "
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:alpha="0.7"/>
                 <TextView
                     android:id="@+id/text_account_type"
                     android:layout_width="wrap_content"
@@ -51,6 +52,7 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    android:alpha="0.7"
                     android:layout_alignParentEnd="true"/>
             </RelativeLayout>
 
@@ -74,7 +76,7 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/personal_info_img"
                         android:layout_width="97dp"
-                        android:layout_height="107dp"
+                        android:layout_height="100dp"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentStart="true"
                         android:padding="10dp"
@@ -131,41 +133,39 @@
                         android:layout_toEndOf="@id/personal_info_img"
                         android:layout_marginStart="12dp"
                         android:layout_marginEnd="10dp"/>
-                    <TextView
-                        android:id="@+id/user_location"
+
+                    <RelativeLayout
+                        android:id="@+id/layout_view_more_user_profile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="12dp"
                         android:layout_below="@id/view2"
-                        android:layout_toEndOf="@id/personal_info_img"
-                        android:text="Location"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="14sp"
-                        android:alpha="0.5"/>
-                    <TextView
-                        android:id="@+id/view_more_details"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxLines="1"
-                        android:text="View More"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="10sp"
-                        android:layout_marginStart="12dp"
-                        android:layout_toEndOf="@id/personal_info_img"
-                        android:layout_below="@id/user_location"
-                        android:alpha="0.6"/>
-                    <ImageView
-                        android:id="@+id/down_arrow"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_toEndOf="@id/view_more_details"
-                        android:layout_below="@id/user_location"
-                        android:src="@drawable/ic_right_arrow_green"
-                        android:rotation="90"
-                        android:layout_marginTop="-2dp"
-                        android:alpha="0.6"/>
+                        android:layout_toEndOf="@id/personal_info_img">
+                        <TextView
+                            android:id="@+id/view_more_details"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLines="1"
+                            android:text="View More"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="12sp"
+                            android:layout_alignParentBottom="true"
+
+                            android:alpha="0.6"/>
+                        <ImageView
+                            android:id="@+id/down_arrow"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_toEndOf="@id/view_more_details"
+                            android:layout_alignParentBottom="true"
+                            android:src="@drawable/ic_right_arrow_green"
+                            android:rotation="90"
+                            android:alpha="0.6"/>
+
+                    </RelativeLayout>
+
+
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
@@ -295,7 +295,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/view5">
+                        app:layout_constraintBottom_toTopOf="@id/layout_id_info_details">
 
 
                         <TextView
@@ -316,11 +316,139 @@
                             app:tint="@color/colorPrimaryDark"/>
 
                     </LinearLayout>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/layout_id_info_details"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:paddingEnd="5dp"
+                        android:paddingBottom="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/layout_id_information"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:visibility="gone">
+
+                        <FrameLayout
+                            android:id="@+id/layout_id_info_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+
+                            <ImageView
+                                android:id="@+id/edit_id_info"
+                                android:layout_width="15dp"
+                                android:layout_height="15dp"
+                                android:layout_gravity="end"
+                                android:src="@android:drawable/ic_menu_edit" />
+
+
+                        </FrameLayout>
+
+
+                        <LinearLayout
+                            android:id="@+id/layout_id_type"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            app:layout_constraintBottom_toTopOf="@id/layout_id_number"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
+                                android:textColor="@color/textColor"
+                                android:textSize="11sp"
+                                android:text="ID Type :"
+                                android:textStyle="bold"/>
+                            <TextView
+                                android:id="@+id/text_view_id_type"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:alpha="1.0"
+                                android:gravity="center_vertical"
+                                android:paddingLeft="@dimen/dimen_10dp"
+                                android:text="None"
+                                android:textSize="11sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layout_id_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginStart="5dp"
+                            app:layout_constraintBottom_toTopOf="@id/layout_expiry_date"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/layout_id_type">
+
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:textColor="@color/textColor"
+                                android:textSize="11sp"
+                                android:gravity="center_vertical"
+                                android:text="ID Number :"
+                                android:textStyle="bold"/>
+                            <TextView
+                                android:id="@+id/text_view_id_number"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:alpha="1.0"
+                                android:gravity="center_vertical"
+                                android:paddingLeft="@dimen/dimen_10dp"
+                                android:text="None"
+                                android:textSize="11sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layout_expiry_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginStart="5dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/layout_id_number">
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:textColor="@color/textColor"
+                                android:textSize="11sp"
+                                android:gravity="center_vertical"
+                                android:text="Expiry Date :"
+                                android:textStyle="bold"/>
+
+                            <TextView
+                                android:id="@+id/text_view_expiry_date"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:alpha="1.0"
+                                android:gravity="center_vertical"
+                                android:paddingLeft="@dimen/dimen_10dp"
+                                android:text="None"
+                                android:textSize="11sp" />
+                        </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
                     <View
                         android:id="@+id/view5"
                         android:layout_width="match_parent"
                         android:layout_height="0.5dp"
-                        app:layout_constraintTop_toBottomOf="@id/layout_id_information"
+                        app:layout_constraintTop_toBottomOf="@id/layout_id_info_details"
                         app:layout_constraintBottom_toTopOf="@id/layout_employment_information"
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="5dp"
